# PearVisor

./: .gitignore  .gitmodules  BENCHMARK_RESULTS.md  CONTRIBUTING.md  DESIGN.md  GPU_PASSTHROUGH_PLAN.md  GPU_WORKING.md  LICENSE  NEXT_STEPS.md  PARALLEL_DEVELOPMENT.md  PHASE_2B_DESIGN.md  PHASE_2B_FINAL_SUMMARY.md  PHASE_2C_DESIGN.md  PHASE_2_PLAN.md  Package.swift  README.md  ROADMAP.md  SESSIONS_6-11_COMPLETE.md  SESSION_11_SUMMARY.md  SESSION_13_COMPLETE.md  SESSION_1_COMPLETE.md  SESSION_2_SUMMARY.md  SESSION_3_COMPLETE.md  SESSION_4_SUMMARY.md  SESSION_5_SUMMARY.md  SESSION_6_SUMMARY.md  SESSION_7_SUMMARY.md  SESSION_8_SUMMARY.md  SESSION_9_SUMMARY.md  STATUS.md  VENUS_BLOCKER.md  VENUS_RESEARCH.md  VM_LIFECYCLE_COMPLETE.md  i want to create an open source project
GPU/: CMakeLists.txt  build-virglrenderer.sh  build.sh
GPU/include/: pv_gpu.h  pv_moltenvk.h  pv_venus_decoder.h  pv_venus_handlers.h  pv_venus_integration.h  pv_venus_protocol.h  pv_venus_ring.h  pv_virgl.h
GPU/src/: pv_gpu.c  pv_metal_renderer.mm  pv_moltenvk.c  pv_venus_decoder.c  pv_venus_handlers.c  pv_venus_integration.c  pv_venus_protocol.c  pv_venus_ring.c  pv_virgl.c  pv_virtio_gpu.c  test_command_buffers.c  test_moltenvk.c  test_resource_handlers.c  test_venus_decoder.c  test_venus_handlers.c  test_venus_integration.c  test_venus_ring.c  test_virgl.c
GuestImages/: README.md  extract-kernel.sh  setup-fedora-venus.sh  setup-ubuntu-venus.sh  ubuntu-24.04-arm64.sh
Sources/PearVisor/: GPUBenchmark.swift  GPUTest.swift  PearVisorApp.swift.bak  TestVM.swift.bak
Sources/PearVisor/Views/: ContentView.swift
Sources/PearVisorCore/: GPUController.swift  GPUIntegration.swift  VZConfigurator.swift  VirtualMachine.swift
Sources/PearVisorGPU/: module.modulemap
Sources/PearVisorGPU/include/: pv_gpu.h
Sources/PearVisorTest/: main.swift
docs/: SESSION_12_SUMMARY.md  SESSION_13_IN_PROGRESS.md
